--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,13 +16,9 @@ jobs:
       uses: actions/checkout@v4
 
     # Sync files via SFTP
-    - name: 📂 Sync files via SFTP
+    - name: 📂 Sync files via FTP
       uses: SamKirkland/FTP-Deploy-Action@v4.3.4
       with:
-        server: ${{ secrets.SFTP_SERVER }}
-        username: ${{ secrets.SFTP_USER }}
-        password: ${{ secrets.SFTP_PASS }}
-        protocol: sftp
-        local-dir: ./  # Directory nel repository GitHub da cui prendere i file
-        server-dir: /path/to/wordpress/  # Directory sul server SFTP dove caricare i file
-
+        server: ${{ secrets.FTP_SERVER }}
+        username: ${{ secrets.FTP_USER }}
+        password: ${{ secrets.FTP_PASS }}
